--- a/main.html
+++ b/main.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Landing Page das Julias</title>
+  <link rel="stylesheet" href="estilo.css" />
 </head>
 <body>
-    
+  <header>
+    <h1>Bem-vindos à nossa página!</h1>
+    <p>Somos Ana Júlia Orlovski e Júlia Dambrós 🚀</p>
+    <button onclick="mostrarMensagem()">Clique para saber mais</button>
+  </header>
+
+  <main>
+    <section class="sobre">
+      <h2>Sobre Nós</h2>
+      <p>Somos duas estudantes apaixonadas por tecnologia, criatividade e inovação. Criamos essa landing page para compartilhar nossos projetos e ideias!</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>Feito com 💛 por Ana Júlia Orlovski & Júlia Dambrós • 2025</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
